# Fidel

./: .gitignore  README.md  distance.py  fidel.py  pyproject.toml  requirements.txt  setup.py  translate.py  word.py  word_list.txt
fidel/: __init__.py  transliterate.py
fidel/utils/: dictionary.py  filter.py  separate.py
src/fidel/: __init__.py  dictionary.py  main.py  translate.py  word.py
src/fidel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fidel/helpers/: filter.py
src/fidel/utilities/: dictionary.py  word.py
